--- a/desktopApp/src/main/resources/view/create/createLabWorkWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createLabWorkWindow/main.fxml
@@ -1,38 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<VBox prefHeight="154.0" prefWidth="673.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.create.createLabWorkWindow.CreateLabWorkController">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<VBox prefHeight="504.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.create.createLabWorkWindow.CreateLabWorkController">
     <VBox alignment="TOP_CENTER">
-        <AnchorPane prefHeight="48.0" prefWidth="800.0">
-            <children>
-                <Label alignment="TOP_LEFT" layoutX="250.0" layoutY="18.0" prefHeight="17.0" prefWidth="87.0" text="Название">
-                    <font>
-                        <Font size="15.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="name" alignment="TOP_CENTER" layoutX="337.0" layoutY="13.0" prefHeight="25.0" prefWidth="257.0">
-                    <font>
-                        <Font size="15.0" />
-                    </font>
-                </TextField>
-            </children>
-        </AnchorPane>
-        <AnchorPane layoutX="10.0" layoutY="164.0" prefHeight="48.0" prefWidth="800.0">
-            <children>
-                <Label alignment="TOP_LEFT" layoutX="250.0" layoutY="14.0" prefHeight="17.0" prefWidth="87.0" text="Тип">
-                    <font>
-                        <Font size="15.0" />
-                    </font>
-                </Label>
-                <ComboBox fx:id="labType" layoutX="337.0" layoutY="12.0" />
-            </children>
-        </AnchorPane>
         <AnchorPane layoutX="10.0" layoutY="212.0" prefHeight="48.0" prefWidth="800.0">
             <children>
-                <Button fx:id="further" alignment="CENTER" layoutX="312.0" layoutY="12.0" text="Далее" />
+                <Button fx:id="back" alignment="CENTER" layoutX="14.0" layoutY="12.0" text="Назад" />
+                <Button fx:id="createLabWork" alignment="CENTER" layoutX="88.0" layoutY="12.0" text="Создать" />
+                <Button fx:id="deleteLabWork" alignment="CENTER" layoutX="169.0" layoutY="12.0" text="Удалить" />
+                <Button fx:id="addTask" alignment="CENTER" layoutX="252.0" layoutY="12.0" text="Добавить задания" />
             </children>
         </AnchorPane>
     </VBox>
+   <TableView fx:id="labWorkTable" prefHeight="456.0" prefWidth="687.0">
+     <columns>
+       <TableColumn fx:id="labWorkNumber" prefWidth="75.0" text="№" />
+       <TableColumn fx:id="labWorkName" prefWidth="405.99998474121094" text="Лабораторная работа" />
+         <TableColumn fx:id="labWorkAtemptsNumber" prefWidth="205.0" text="Количество попыток" />
+     </columns>
+   </TableView>
 </VBox>
