--- a/desktopApp/src/main/resources/view/create/createQuestionWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createQuestionWindow/main.fxml
@@ -12,7 +12,7 @@
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <TextField fx:id="name" alignment="TOP_CENTER" layoutX="337.0" layoutY="13.0" prefHeight="25.0" prefWidth="257.0">
+                <TextField fx:id="nameField" alignment="TOP_CENTER" layoutX="337.0" layoutY="13.0" prefHeight="25.0" prefWidth="257.0">
                     <font>
                         <Font size="15.0" />
                     </font>
