--- a/desktopApp/src/main/resources/view/startWindow/admin/main.fxml
+++ b/desktopApp/src/main/resources/view/startWindow/admin/main.fxml
@@ -5,6 +5,6 @@
 <?import javafx.scene.layout.VBox?>
 <VBox prefWidth="400" prefHeight="400" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.startWindow.admin.StartAdminController">
     <VBox alignment="TOP_CENTER">
-        <Button fx:id="create" text="Создать задание"/>
+        <Button fx:id="create" text="Создать"/>
     </VBox>
 </VBox>
