--- a/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import kurlyk.view.common.component.DoubleField?>
 <?import kurlyk.view.common.component.MyHTMLEditor?>
-<?import kurlyk.view.common.component.NumberField?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.computerSystemDiagramWindow.ComputerSystemDiagramController">
     <HBox>
         <MyHTMLEditor fx:id="textArea" HBox.hgrow="ALWAYS">
@@ -20,7 +20,7 @@
                     <Button fx:id="ramButton" text="RAM" maxWidth="Infinity"> </Button>
                     <Button fx:id="ioButton" text="IO" maxWidth="Infinity"> </Button>
                     <Button fx:id="pointButton" text="POINT" maxWidth="Infinity"> </Button>
-                    <NumberField fx:id="availabilityFactorField" > </NumberField>
+                    <DoubleField fx:id="availabilityFactorField" > </DoubleField>
                     <Button fx:id="connect" text="CONNECT" maxWidth="Infinity"> </Button>
                 </VBox>
             </right>
