--- a/desktopApp/src/main/resources/view/task/numberWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/numberWindow/main.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import kurlyk.view.common.component.DoubleField?>
 <?import kurlyk.view.common.component.MyHTMLEditor?>
-<?import kurlyk.view.common.component.NumberField?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.numberWindow.NumberController">
     <HBox>
         <MyHTMLEditor fx:id="textArea" HBox.hgrow="ALWAYS">
@@ -12,7 +12,7 @@
         </MyHTMLEditor>
     </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
-        <NumberField fx:id="inputField" VBox.vgrow="ALWAYS"/>
+        <DoubleField fx:id="inputField" VBox.vgrow="ALWAYS"/>
     </VBox>
     <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
         <Button fx:id="submit" text="Ответ">
