--- a/desktopApp/src/main/resources/view/components/labTreeView/tree/main.fxml
+++ b/desktopApp/src/main/resources/view/components/labTreeView/tree/main.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.HBox?>
-<HBox fx:id="root" maxWidth="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.components.labTreeView.tree.TreeController">
+<?import javafx.scene.layout.VBox?>
+<VBox fx:id="root" maxWidth="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.components.labTreeView.tree.TreeController">
 
-</HBox>
+</VBox>
