--- a/desktopApp/src/main/resources/view/task/sortingWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/sortingWindow/main.fxml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.components.DoubleField?>
-<?import kurlyk.view.components.IntegerField?>
+<?import kurlyk.view.components.DraggingListView?>
 <?import kurlyk.view.components.MyHtmlEditor?>
-<VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.numberWindow.NumberController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.sortingWindow.SortingController">
     <HBox>
         <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
 
         </MyHtmlEditor>
     </HBox>
-
-    <HBox>
-        <VBox fx:id="root" alignment="TOP_CENTER" HBox.hgrow="ALWAYS">
-            <DoubleField fx:id="inputField" prefWidth="715.0" VBox.vgrow="ALWAYS" />
-        </VBox>
-        <IntegerField fx:id="accuracyField" HBox.hgrow="ALWAYS"/>
-    </HBox>
+    <VBox fx:id="root" alignment="TOP_CENTER">
+        <HBox>
+            <DraggingListView fx:id="itemsField" HBox.hgrow="ALWAYS"/>
+        </HBox>
+    </VBox>
     <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
         <Button fx:id="submit" text="Ответ">
             <font>
